--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - wordpress_data:/var/www/html
       - ./themes:/var/www/html/wp-content/themes
       - ./plugins:/var/www/html/wp-content/plugins
+      - ./container/uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
       
     ports:
       - '80:80'
